k8s/endpoint-syncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: endpoint-syncer
  namespace: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: endpoint-syncer
  template:
    metadata:
      labels:
        app: endpoint-syncer
    spec:
      serviceAccountName: endpoint-syncer
      containers:
      - name: syncer
        image: bitnami/kubectl:latest
        command:
        - /bin/bash
        - -c
        - |
          [...]
