k8s/grafana-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: voting-app-gateway
      namespace: voting-app
      sectionName: https-grafana
  hostnames:
    - grafana.34.194.59.190.nip.io
  rules:
    - backendRefs:
        - name: monitoring-grafana
          port: 80
